--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "--api.dashboard=true"
       - "--entrypoints.web.address=:80"
     networks:
-      - app-network
+      - traefik-network
     ports:
       - "80:80"
       - "8080:8080"
@@ -23,5 +23,5 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
 
 networks:
-  app-network:
+  traefik-network:
     external: true
