--- a/site2/docker-compose.yml
+++ b/site2/docker-compose.yml
@@ -14,8 +14,11 @@ services:
       - "traefik.http.services.app2.loadbalancer.server.port=80"
     networks:
       - app-network
+      - traefik-network
     env_file:
       - ".env"
 networks:
   app-network:
+    external: true
+  traefik-network:
     external: true
